@@ -14,7 +14,7 @@ gchar *s = N_("BMP");
 gchar *s = N_("Image format:");
 gchar *s = N_("Skips: ");
 gchar *s = N_("Number of frames to capture");
-gchar *s = N_("Number of frames to skip between 2 captures.");
+gchar *s = N_("Number of frames to skip between 2 captures. Beware: if you want to capture image every 4 frames, you need to set value to 3.");
 gchar *s = N_("Shots: ");
 gchar *s = N_("Burst capture:");
 gchar *s = N_("Select folder");
