@@ -31,6 +31,7 @@ SubVersion: $Id$
 	- [roms]  $2179: fixed bug #1435183 (Error window when closing TI emu)
 	- [roms]  $2190: added BMP screenshot support and fixed frame spacing
 	- [roms]  $2191: reworked screenshot option dbox and prepared next step
+	- [roms]  $2194: added ability to take several screenshots (burst mode)
 
 - 10/05/2006, version 2.81:
 	- [roms] $2059: renamed 'code/source' window into 'disassembly'
